--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
+    "format": "prettier-standard --format",
     "start": "node --experimental-specifier-resolution=node src/app.js"
   },
   "keywords": [],
@@ -14,5 +15,13 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "node-fetch": "^3.3.0"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.1",
+    "prettier-standard": "^16.4.1",
+    "standard": "^17.0.0"
+  },
+  "eslintConfig": {
+    "extends": "./node_modules/standard/eslintrc.json"
   }
 }
